Finish the JS portion and complete game

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="header">
-        <div class="announce"></div>
+        <div class="announce">Rock, Paper, Scissors!</div>
         <div class="next-container">
-            <div class="next-round"></div>
+            <div class="next-game"></div>
         </div>
     </div>    
     <div class="battle-container">
@@ -23,18 +23,18 @@
             </div>
             <div class="indicators"><span class="player-ind">Player</span> <span class="VS">VS</span> <span class="opponent-ind">Opponent</span></div>
             <div class="scores">
-                <div class="player-score-title"><div></div>Player wins: <span class="player-score">0</span></div>
-                <div class="tie-title">Ties: <span class="ties">0</span></div>
-                <div class="opponent-score-title">Opponent wins: <span class="opponent-score">0</span></div>
+                <div class="player-score-title"><div></div>Player wins: <span class="player-score"></span></div>
+                <div class="tie-title">Ties: <span class="ties"></span></div>
+                <div class="opponent-score-title">Opponent wins: <span class="opponent-score"></span></div>
             </div>
         </div>
     </div>
     <div class="weapon-header">Choose your weapon!</div>
     <div class="selection-container">
         <div class="selection">
-            <div class="rock-button"><img class="img-button" src="./rpsImages/rock.png"></div>
-            <div class="paper-button"><img class="img-button" src="./rpsImages/paper.png"></div>
-            <div class="scissor-button"><img class="img-button" src="./rpsImages/scissors.png"></div>
+            <div class="rock-button" id="Rock"><img class="img-button" src="./rpsImages/rock.png"></div>
+            <div class="paper-button" id="Paper"><img class="img-button" src="./rpsImages/paper.png"></div>
+            <div class="scissor-button" id="Scissors"><img class="img-button" src="./rpsImages/scissors.png"></div>
         </div>
     </div>
 </body>
